fix annoying layout bug

--- a/styles.css
+++ b/styles.css
@@ -65,19 +65,18 @@ textarea {
         width: 80px;
     }
 
+body > article {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
 body > header,
 body > article,
 body > article > header,
 body > article > section,
 body > article > footer,
 body > footer {
-    display: none;
-    position: absolute;
-	margin: 0;
-    width: 90%;
-    height: 90%;
-    padding: 5%;
-
     -webkit-transform-style: preserve-3d;
     -webkit-transition: all 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
     -moz-transition: all 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
@@ -103,6 +102,13 @@ body > footer {
     -ms-box-shadow: 0 0 10px #000;
     -o-box-shadow: 0 0 10px #000;
     box-shadow: 0 0 10px #000;
+
+    display: none;
+    position: absolute;
+	margin: 0;
+    width: 90%;
+    height: 90%;
+    padding: 5%;
 }
 
 .past {
